Allow for bigger OCR output + add more date formats

--- a/UI/templates/index.html
+++ b/UI/templates/index.html
@@ -33,7 +33,7 @@
     {% if init %}
         {% if invalidImage %}
             <div class="alert alert-danger" style="margin-top:18px;">
-                <strong>Error</strong> Your image contain invalid content !
+                <strong>Error</strong> Invalid Image!
             </div>
         {% else %}
             <div class="alert alert-success" style="margin-top:18px;">
